# horizons

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  manager.rs  shell.rs
src/data/: assignment.rs  config.rs  connections.rs  course.rs  mod.rs  student.rs  submission.rs
src/modules/: current_mod.rs  mod.rs  module.rs
